# Sentinel

./: .env.example  .env.prod.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-admin.yml  publish-js-sdk.yml  publish-sdk.yml  publish-service.yml
admin/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx
demo/: README.md
demo-authz/backend/: .env.example
demo-authz/frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
demo/backend/: .env.example  pyproject.toml
demo/backend/src/: config.py  deps.py  main.py  models.py  routes.py
docs/: INTEGRATION.md  PLAN.md  SECURITY.md  index.md  security.md
pentest/: .gitignore  04_service_key_bypass.py  07_session_oauth.py  09_token_lifecycle.py  README.md  config.py  requirements.txt  run_all.py  setup_tools.sh
scripts/: create_admin.py  release.sh  seed.py
sdk/: pyproject.toml
sdk/src/identity_sdk/: __init__.py  dependencies.py  middleware.py  permissions.py  roles.py
sdk/src/sentinel_auth/: __init__.py  _utils.py  auth.py  authz.py  authz_middleware.py  dependencies.py  middleware.py  permissions.py  roles.py  sentinel.py
sdk/tests/: test_auth.py  test_authz_client.py  test_dependencies.py  test_middleware.py  test_permissions.py
sdks/: package-lock.json  package.json
service/: Dockerfile  alembic.ini  pyproject.toml
service/migrations/: env.py
service/migrations/versions/: 21bddf454fbc_initial_schema.py  912f4927e4f6_add_is_admin_to_users.py  9ea1bf38293e_add_client_apps_table.py  a2d16838a854_add_activity_logs.py  b7f1aff0c8f1_initial_schema.py  c1b4ba2fddf9_add_rbac_tables.py  d3f8a1b2c4e5_add_service_apps_table.py
service/src/: config.py  database.py  main.py
service/src/api/: admin_routes.py  auth_routes.py  authz_routes.py  dependencies.py  group_routes.py  permission_routes.py  role_routes.py  user_routes.py  workspace_routes.py
service/src/auth/: jwks.py  jwt.py
service/src/middleware/: cors.py  rate_limit.py  security_headers.py
service/src/models/: __init__.py  activity.py  client_app.py  group.py  permission.py  role.py  service_app.py  user.py  workspace.py
service/src/schemas/: admin.py  auth.py  authz.py  client_app.py  group.py  permission.py  role.py  service_app.py  user.py  validators.py  workspace.py
service/src/services/: activity_service.py  admin_service.py  auth_code_service.py  auth_service.py  group_service.py  idp_validator.py  permission_service.py  role_service.py  service_app_service.py  token_service.py  workspace_service.py
service/tests/: test_idp_validator.py
(+188 files in other folders)
