[project]
name = "daikon-identity-service"
version = "0.1.0"
description = "Daikon Identity — authentication, workspace management & permissions microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["daikon-identity-sdk", "uvicorn[standard]>=0.34.0"]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-section-index>=0.3",
    "mkdocs-glightbox>=0.4",
]

[tool.uv.sources]
daikon-identity-sdk = { workspace = true }

[tool.uv.workspace]
members = ["service", "sdk"]
