[project]
name = "sentinel-auth-sdk"
version = "0.10.0"
description = "Sentinel Auth SDK — JWT middleware, FastAPI dependencies, permission client"
requires-python = ">=3.12"
dependencies = [
    "pyjwt[crypto]>=2.10.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "pydantic>=2.10.0",
    "starlette>=0.40.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_auth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
