[project]
name = "sentinel-auth"
version = "0.10.2"
description = "Sentinel Auth — FastAPI microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "authlib>=1.4.0",
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "nh3>=0.2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
