[project]
name = "demo-team-notes"
version = "0.1.0"
description = "Team Notes — demo app showcasing the Daikon Identity SDK"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "daikon-identity-sdk",
]

[tool.uv.sources]
daikon-identity-sdk = { path = "../../sdk", editable = true }
